k8s/app/istio-test-child-apps/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-test-app
  namespace: istio-test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-test-app
  namespace: istio-test
spec:
  hosts:
    - "*"
  gateways:
    - istio-test-app
  http:
    - match:
        - uri:
            exact: /
      route:
        - destination:
            host: istio-test-app
            port:
              number: 8080
